force-app/main/default/objects/Opportunity/fields/Created_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped field from a converted lead indicating this opportunity was created upon lead conversion</description>
    <label>Created From Lead?</label>
    <type>Checkbox</type>
</CustomField>