force-app/main/default/objects/Opportunity/fields/Expected_Hours_Week__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_Week__c</fullName>
    <description>Used to help calculate quote - thare the hours per week that our craftspeople would be expected to work</description>
    <label>Expected Hours/Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hours_Per_Week</valueSetName>
    </valueSet>
</CustomField>