force-app/main/default/objects/Opportunity/fields/Job_City__c.field-meta.xml
<CustomField>
    <fullName>Job_City__c</fullName>
    <description>Used to help calculate quote - this is the city the potential job will be in</description>
    <label>Job City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>