force-app/main/default/objects/Opportunity/fields/Job_Street__c.field-meta.xml
<CustomField>
    <fullName>Job_Street__c</fullName>
    <description>Street address for the job</description>
    <label>Job Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>