force-app/main/default/objects/Opportunity/fields/Job_Zip__c.field-meta.xml
<CustomField>
    <fullName>Job_Zip__c</fullName>
    <description>Used to help calculate quote - this is the zip code the potential job will be in</description>
    <label>Job Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>