force-app/main/default/objects/Opportunity/fields/Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value__c</fullName>
    <description>Sum of related project craft value fields</description>
    <label>Opportunity Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>