force-app/main/default/objects/Opportunity/fields/Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem__c</fullName>
    <description>Amount of per diem that will be paid to the craftsperson</description>
    <label>Per Diem</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>