force-app/main/default/objects/Opportunity/fields/Work_Days_Week__c.field-meta.xml
<CustomField>
    <fullName>Work_Days_Week__c</fullName>
    <description>Used to help calculate quote - these are the number of days per week our craftspeople are expected tow work</description>
    <label>Work Days/Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Days_Per_Week</valueSetName>
    </valueSet>
</CustomField>