force-app/main/default/objects/Opportunity/fields/Work_Shift__c.field-meta.xml
<CustomField>
    <fullName>Work_Shift__c</fullName>
    <description>Used to help calculate quote - this is the expected shift that our craftspeople will work</description>
    <label>Work Shift</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AC_Shifts</valueSetName>
    </valueSet>
</CustomField>